...
        app:layout_constraintBottom_toTopOf="@id/main.btn.dev" />

    <TextView
        android:id="@+id/main.tv.result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/main_tv_result"
        tools:text="RESULT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main.et.one" />

...
